--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <groupId>org.wicketTutorial</groupId>
     <artifactId>HelloWorldExample</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <!-- TODO project name  -->
     <name>HelloWorldExample</name>
     <!--
@@ -58,12 +58,16 @@
             <artifactId>wicket-core</artifactId>
             <version>${wicket.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>org.wicketTutorial.commons.bootstrap</groupId>
-            <artifactId>BootstrapCommon</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>5.1.2</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.wicketTutorial.commons.bootstrap</groupId>-->
+<!--            <artifactId>BootstrapCommon</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
 
         <!-- LOGGING DEPENDENCIES - LOG4J -->
         <dependency>
@@ -159,26 +163,26 @@
         </plugins>
     </build>
     <repositories>
-        <repository>
-            <id>Apache Nexus</id>
-            <url>https://repository.apache.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>Stage</id>
-            <url>https://repository.apache.org/content/repositories/orgapachewicket-1209</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
+<!--        <repository>-->
+<!--            <id>Apache Nexus</id>-->
+<!--            <url>https://repository.apache.org/content/repositories/snapshots/</url>-->
+<!--            <releases>-->
+<!--                <enabled>false</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>true</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>Stage</id>-->
+<!--            <url>https://repository.apache.org/content/repositories/orgapachewicket-1209</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
     </repositories>
 
 </project>
